--- a/src/AppGit/AppGit/AppGit.csproj
+++ b/src/AppGit/AppGit/AppGit.csproj
@@ -40,10 +40,17 @@
     </Compile>
     <Compile Include="Model\Repository.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Pages\RepositoriesPage.xaml.cs">
+      <DependentUpon>RepositoriesPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\UsersPage.xaml.cs">
       <DependentUpon>UsersPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IGitRepositoryService.cs" />
+    <Compile Include="Services\IServiceBase.cs" />
+    <Compile Include="Services\RepositoryService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\UsersViewModel.cs" />
   </ItemGroup>
@@ -70,9 +77,14 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Pages\UsersPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\RepositoriesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
